--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -129,6 +129,8 @@
     <string name="book_color_support_color">Zweifarbig</string>
     <string name="book_color_black_and_white">schwarzweiß</string>
     <string name="book_format_audiobook">Hörbuch</string>
+    <string name="book_format_comic">Comic-Buch</string>
+    <string name="book_format_other">Andere</string>
     <string name="book_format_digest">Heft</string>
     <string name="book_format_dimensions">Abmessungen</string>
     <string name="book_format_ebook">eBook</string>
@@ -478,6 +480,7 @@
     <string name="option_import">Importieren</string>
     <string name="option_lend_out_book">Buch verleihen…</string>
     <string name="option_lend_return_book">Geliehenes Buch ist zurück</string>
+    <string name="option_purge_bedetheque_authors_cache">Leeren Sie den Cache der Bedetheque-Autoren</string>
     <string name="option_rebuild_fts">FTS neu aufbauen</string>
     <string name="option_rebuild_index">Index neu erstellen</string>
     <string name="option_set_complete">Als abgeschlossen markieren</string>
@@ -559,6 +562,10 @@
     <string name="pt_collect_series_info_from_toc">Sammeln Sie Serieninformationen aus dem Inhaltsverzeichnis</string>
     <string name="pt_cropper_frame_is_whole_image">Standardbeschnitt besteht aus dem gesamten Bild</string>
     <string name="pt_edit_book_isbn_checks">ISBN-Gültigkeitsprüfungen</string>
+    <string name="pt_bob_row_menu">Kontextmenü der Zeile.</string>
+    <string name="pe_bob_row_menu_button">Immer eine Schaltfläche anzeigen.</string>
+    <string name="pe_bob_row_menu_button_when_space">Wenn Platz vorhanden ist, Schaltfläche anzeigen, andernfalls Langklick verwenden.</string>
+    <string name="pe_bob_row_menu_long_click">Verwenden Sie immer den langen Klick.</string>
     <string name="pt_fast_scroller_overlay">Textblase beim Scrollen</string>
     <string name="pt_line_spacing">Zeilenabstand</string>
     <string name="pt_maintenance">Instandhaltung</string>
@@ -698,4 +705,16 @@
     <string name="lbl_group_1st_char_series_title">1. Zeichen des Serientitels</string>
     <string name="lbl_group_1st_char_publisher_name">1. Zeichen des Publisher-Namens</string>
     <string name="lbl_group_1st_char_book_title">1. Zeichen des Buchtitels</string>
+    <string name="lbl_author_pseudonym">Dies ist ein Pseudonym von:</string>
+    <string name="err_real_author_must_be_valid">Muss leer oder ein vorhandener Autor sein.</string>
+    <string name="confirm_create_real_author">„%1$s“ existiert noch nicht. Sollen sie erstellt werden?</string>
+    <string name="pt_search_resolve_authors_bedetheque">Pseudonyme von Autoren über die Website der Bedetheque auflösen</string>
+    <string name="pt_bedetheque_search_resolve_formats">Benennung im Bedetheque-Format (französisch) beibehalten</string>
+    <string name="confirm_no_missing_covers_search_from_top">Alle Bücher unterhalb dieser Reihe haben Einbände. Nochmals von oben suchen?</string>
+    <string name="info_all_books_have_covers">Alle Bücher in diesem Bücherregal haben Einbände.</string>
+    <string name="book_format_hardcover_oblong">Gebundene Ausgabe - länglich</string>
+    <string name="book_format_softcover_oblong">Softcover - länglich</string>
+    <string name="lbl_purge_blns">Löschen Sie den Knotenstatus</string>
+    <string name="info_purge_blns_all">Löschen Sie den Knotenstatus aus allen Listen</string>
+    <string name="info_purge_blns_item_name">Knotenstatus von %1$s \"%2$s\" löschen?</string>
 </resources>
